--- a/styles.css
+++ b/styles.css
@@ -344,10 +344,10 @@ justify-content: center;
 .item_services{
 width: 300px;
 height: 300px;
-
 position: relative;
-display: block;
 bottom: 0;
+display: flex;
+ flex-direction: column;
 
 }
 .item_services img{
