--- a/styles.css
+++ b/styles.css
@@ -333,7 +333,7 @@ header{
 }
 #cont_services{
 width: 100%;
-height:1000px;
+height:fit-content;
 display: flex;
 flex-wrap: wrap;
 flex-direction: row;
@@ -347,7 +347,7 @@ height: 300px;
 position: relative;
 bottom: 0;
 display: flex;
- flex-direction: column;
+flex-direction: column;
 
 }
 .item_services img{
