--- a/styles.css
+++ b/styles.css
@@ -426,6 +426,8 @@ and (max-device-width: 856px)
 {
     .menu{
       display: none;
+      position: absolute;
+      right: 25px;
     
     }
     .menu li{
