--- a/styles.css
+++ b/styles.css
@@ -306,7 +306,7 @@ header{
     display: flex;
     flex-direction: column;
     height: fit-content;
-    background: #c7f010;
+    background: #07286486;
     text-align: center;
     gap: 18px;
     position: absolute;
