--- a/styles.css
+++ b/styles.css
@@ -421,6 +421,39 @@ font-weight: bolder;
     height: 150px;
 }
 
+#galeria{
+    width: 100%;
+    height: fit-content;
+    position: relative;
+   text-align: center;
+
+
+}
+
+#video_section{
+    position: relative;
+    width: 100%;
+    height: fit-content;
+   text-align: center;
+   
+}
+#imagen_section{
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    width: 100%;
+    height: 250px;
+    overflow: hidden;
+    overflow-x: scroll;
+    gap: 5px;
+    left: 5px;
+    right: 5px;
+}
+#imagen_section img{
+
+    width: 260px;
+    height: 100%;
+}
 
 
 @media only screen
