--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@
 
 }
 
+
 /*body{
 position: relative;
 min-height: 100vh;
@@ -250,8 +251,44 @@ display: none;
 */
 
 /*---------------------------------------*/
+
+#info_head{
+    width: 100%;
+    height: 30px;
+    background: rgba(14, 206, 27, 0.708);
+    display: flex;
+    position: static;
+    flex-direction: row;
+    justify-content: center;
+    padding-top: 10px;
+}
+#info_head p{
+    font-size: 13px;
+    color: white;
+    vertical-align: middle;
+    float: right;
+    position: relative;
+    border-right: 1px solid white;
+    height: fit-content;
+    padding-right: 5px;
+    
+}
+#info_head a{
+    font-size: 13px;
+    color: white;
+    vertical-align: middle;
+    float: right;
+    position: relative;
+    margin-left: 8px;
+    height: fit-content;
+    padding-right: 5px;
+    
+}
+#info_head svg{
+    color: white;
+}
 header{
-    width: 99%;
+    width: 100%;
     height: 400px;
     background-image: url("img/camara_head1.png");
     display: flex;
@@ -451,10 +488,11 @@ font-weight: bolder;
    
 }
 #imagen_section{
+    
     display: flex;
     position: relative;
     flex-direction: row;
-    width: 96%;
+    width: 98%;
     height: 250px;
     overflow: hidden;
     overflow-x: scroll;
@@ -467,13 +505,36 @@ font-weight: bolder;
     width: 260px;
     height: 100%;
 }
+#whatsapp{
+            
+    height: fit-content;
+    position: fixed;
+    right: 20px;
+    bottom: 48px;
+    z-index: 99;
+    background:#1ebe41f0;
+    border-radius:30px;
+    text-decoration: none;
+    font-size: 13px;
+    padding-top:10px ;
+    padding-bottom: 10px;
+    text-align: center;
+    color: white;
+    padding-left: 5px;
+    padding-right: 8px;
+    
+}
 
 
 @media only screen
-and (min-device-width: 120px)
-and (max-device-width: 856px)
+and (min-width: 120px)
+and (max-width: 856px)
 
 {
+    #info_head{
+
+        display: none;
+    }
     .menu{
       display: none;
       position: absolute;
@@ -498,7 +559,6 @@ header{
     height: 250px;
 }
    
-    
-    
+
 
 }
