--- a/styles.css
+++ b/styles.css
@@ -390,9 +390,114 @@ header{
     width: 1px;
     text-align: center;
     z-index: 1000;
-    background-color: #c7f010;
+    
     right: 70px;
   }
+
+
+ #lateral{
+    width: 0;
+    height: 99.9%;
+    position: fixed;
+   display: block;
+   flex-direction: column;
+    z-index: 999;
+    overflow: hidden;
+    transform: scaleX(0px);
+    transition: all .5s ease;
+ }
+ #lateral.active{
+   width: 250px;
+   
+    height: 99.9%;
+    position: fixed;
+   background: white;
+    z-index: 999;
+    
+    transform: scaleX(250px);
+    transition: all .5s ease;
+ }
+ #lateral h3, h5{
+    width: 150px;
+    text-align: center;
+    position: relative;
+    top: 15px;
+    height: fit-content;
+    
+ }
+ .src .bx-search-alt-2{
+    
+    position: absolute;
+    z-index: 99;
+    font-size: 22px;
+    color: #3f3b3b;
+    margin-left: 5px;
+    top: 9px;
+   right: 15px;
+    
+}
+ .src .bx-search-alt-2:hover{
+    color: blue;
+}
+.src .bx-search-alt-2:hover input{
+    background: #ffffff;
+}
+.src {
+    width: 99%;
+    display: flex;
+    flex-direction: row;
+    height: 40px;
+    
+    position: relative;
+    top: 30px;
+    
+}
+.src input{
+    position: relative;
+    height: 40px;
+    width: calc(100% - 50px);
+    left:0;
+    border-radius: 20px;
+    outline: none;
+    border: none;
+   
+    padding-left: 50px;
+    font-size:  15px ;
+    
+    box-shadow: 0 5px 10px rgba(0,0,0.2); 
+    transition: all .5s ease;
+} 
+ .menu_lateral {
+    width: 250px;
+    height: fit-content;
+    
+    display: block;
+    top: 45px;
+    position: relative;
+    font-size: 20px;
+
+ }
+ .menu_lateral li{
+    margin-top: 20px;
+    
+
+ }
+ .menu_lateral li a{
+    display: flex;
+    flex-direction: row;
+   text-decoration: none;
+   color: #3f3b3b;
+   position: relative;
+   width: fit-content;
+   
+   left: 30px;
+   gap: 15px;
+ }
+ #lateral p{
+   
+    position: relative;
+   top: 80px;
+ }
 
 .container{
     width: 99%;
