--- a/styles.css
+++ b/styles.css
@@ -385,26 +385,28 @@ header{
     visibility: hidden;
     top: 70px;
     cursor: pointer;
-    font-size: 35px;
-    height: 1px;
+    font-size: 39px;
+    height: .5px;
     width: 1px;
     text-align: center;
     z-index: 1000;
-    
+    border: 0;
     right: 70px;
+    list-style: none;
   }
 
 
  #lateral{
-    width: 0;
+  width: 0;
     height: 99.9%;
     position: fixed;
    display: block;
    flex-direction: column;
     z-index: 999;
     overflow: hidden;
-    transform: scaleX(0px);
+    
     transition: all .5s ease;
+    background: white;
  }
  #lateral.active{
    width: 250px;
@@ -412,7 +414,7 @@ header{
    background: white;
     z-index: 999;
     
-    transform: scaleX(250px);
+   
     transition: all .5s ease;
  }
  #lateral h3, h5{
@@ -511,8 +513,8 @@ header{
  #lateral img{
     position: relative;
     top: 15px;
-    width: 85px;
-    height: 90%;
+    width: 83px;
+    height: 80%;
    
  }
  #redes_lateral{
@@ -525,11 +527,69 @@ header{
     display: flex;
     flex-direction: row;
     gap: 15px;
+   
  }
  #redes_lateral box-icon{
-    width: 40px;
+    width: 38px;
     height: 40px;
  }
+ #button_lateral{
+   display: none;
+    opacity: 0;
+    width:0px;
+    height: 0px;
+    background: rgb(20, 227, 41);
+    position: fixed;
+    top: 150px;
+    border-radius: 50%;
+    z-index: 999;
+    transition: all .5s ease;  
+ }
+
+ #button_lateral.show{
+    width: 50px;
+    height: 50px;
+    
+    transition: all .5s ease;      
+    opacity: 1;
+    overflow: hidden;
+    
+ }
+ #button_lateral.active{
+    transition: all .5s ease;   
+    transform: translateX(250px);
+    background: rgba(11, 233, 11, 0.9);
+    
+ }
+ #toogle_menu_lateral{
+    position: relative;
+    border: 0;
+    cursor: pointer;
+    font-size: 35px;
+    height: 1px;
+    width: 1px;
+   opacity: 0;
+    z-index: 1000;
+    color: white;
+  
+  }
+  
+.show #toogle_menu_lateral{
+    position: relative;
+    
+    cursor: pointer;
+    font-size: 35px;
+    height: 1px;
+    width: 1px;
+   opacity: 1;
+    z-index: 1000;
+    left: 8px;
+    bottom: 8px;
+    transition: all .5s ease;  
+    
+  }
+  
+  
 
 .container{
     width: 99%;
@@ -682,10 +742,14 @@ and (max-width: 856px)
         border-bottom:0px ;
       
       }
-
+      #button_lateral{
+        display: block;
+      }
+      
 #toogle_menu{
     visibility: visible;
     color: white;
+    background-color: transparent;
 }
 #logo img{
     width:60%;
