--- a/styles.css
+++ b/styles.css
@@ -728,17 +728,18 @@ header{
 }
 #btn_obtener{
     position: absolute;
-   height: fit-content;
+   height: 25px;
     bottom: 5px;
    right: 20%;
     width: 200px;
+    vertical-align: middle;
     text-align: center;
     background:#1ebe41f0;
     text-decoration: none;
     padding: 8px;
-    padding-top: 10px;
+    padding-top: 15px;
     padding-bottom: 10px;
-    font-size: 15px;
+    font-size: 18px;
     border-radius:25px;
     color: white;
     animation: colors 3s   ease-in-out infinite;
@@ -867,7 +868,7 @@ font-weight: bolder;
     background:#1ebe41f0;
     border-radius:30px;
     text-decoration: none;
-    font-size: 13px;
+    font-size: 25px;
     padding-top:10px ;
     padding-bottom: 10px;
     text-align: center;
@@ -943,16 +944,17 @@ box-shadow: 3px 3px 3px 1px rgba(219, 25, 25, 0.479);
 }
 #whatsapp{
     width: 250px;
-    height: fit-content;
+    height: 30px;
+    border-radius: 120px 0px 120px 120px;
     position: fixed;
     right: 10px;
     bottom: 20px;
     z-index: 99;
     background:#1ebe41f0;
-    border-radius:30px;
+   vertical-align: middle;
     text-decoration: none;
-    font-size: 13px;
-    padding-top:10px ;
+    font-size: 15px;
+    padding-top:15px ;
     padding-bottom: 10px;
     text-align: center;
     color: white;
