--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Permanent+Marker&family=REM:wght@200&family=Ubuntu&display=swap');  
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Permanent+Marker&family=REM:wght@200&family=Ubuntu&display=swap&family=Lato');  
 
 
 *{
@@ -14,7 +14,7 @@
 
     width: 35px;
     height: 35px;  
-    border: 1px solid rgb(58, 228, 58);
+    border: 1px solid  rgb(25,118,210);
     position: fixed;
     z-index: 1111;
     border-radius: 50%;
@@ -38,7 +38,7 @@ body:active  #bola_child{
 #bola_child{
    width: 15px;
     height: 15px;  
-    background-color: rgb(58, 228, 58);
+    background-color: rgb(25,118,210);
     position: fixed;
     z-index: 1111;
     border-radius: 50%;
@@ -290,7 +290,7 @@ display: none;
 #info_head{
     width: 100%;
     height: 30px;
-    background: rgba(14, 206, 27, 0.708);
+    background: rgb(25,118,210);
     display: flex;
     position: static;
     flex-direction: row;
@@ -573,7 +573,7 @@ header{
     opacity: 0;
     width:0px;
     height: 0px;
-    background: rgb(20, 227, 41);
+    background:  rgb(25,118,210);
     position: fixed;
     top: 150px;
     border-radius: 50%;
@@ -755,9 +755,13 @@ header{
 }
 .container h2{
    margin-top: 25px;
-    text-align: center;
-    text-decoration: underline;
-   
+   font-size: 30px;
+   font-weight: 0;
+  text-align: center;
+  color: rgb(25,118,210);
+  font-family: "Lato","Avenir",Arial,sans-serif;
+            
+        
     
 }
 #cont_services{
@@ -788,23 +792,46 @@ flex-direction: column;
 .item_name{
     width: 100%;
     height: 60px;
-    background: yellow;
+    background:rgb(25,118,210);
     position: relative;
     top: -15px;
     border-radius: 9px;
     text-align: center;
+   
     
 }
 .item_name a{
     position: relative;
     top: 15px;
     text-decoration: none;
-    color: black;
+    color: white;
     text-align: center;
 }
 .item_name a:hover {
 color: blue;
 font-weight: bolder;
+
+}
+
+.item_name a:hover~ .descrptiom_item{
+    background:white    ;
+    height: 250px;
+    transition: .5s ease-in;
+    border-radius: 5px;
+    }
+.descrptiom_item{
+position: absolute;
+    width: 100%;
+    height: 0px;
+   background: #10c7f0;
+   overflow: hidden;
+    z-index: 999;
+    top: 50px;
+    justify-content: center;
+}
+.descrptiom_item p{
+    text-align: center;
+    width: 90%;
 
 }
 
@@ -959,6 +986,30 @@ box-shadow: 3px 3px 3px 1px rgba(219, 25, 25, 0.479);
     text-align: center;
     color: white;
     
+}
+#aboutus{
+    display: flex;
+    flex-direction: column;
+  position: relative;
+    width: 99%;
+    height: fit-content;
+  
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    gap: 35px;
+
+}
+#aboutus h2{
+    color: rgb(25,118,210);
+}
+#desc_about{
+    line-height: 1.2;
+   position: relative;
+    width: 500px;
+    font-weight: 0;
+    font-family: "Lato","Avenir",Arial,sans-serif;
+   
 }
 
 
