--- a/styles.css
+++ b/styles.css
@@ -289,6 +289,21 @@ display: none;
 */
 
 /*---------------------------------------*/
+
+::-webkit-scrollbar {
+    width: 5px;
+    background-color: transparent
+}
+::-webkit-scrollbar-track {
+    
+    border-radius: 10px;
+   
+}
+::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.832);
+    background-color: #19263377;
+}
 @keyframes imgshow{
 
     from{
@@ -300,7 +315,7 @@ display: none;
         scale: 100%;
     }
 }
-iframe,img,p,h2,.item_services,#sorteos{
+iframe,img,h2,.item_services,#sorteos{
     view-timeline-name: --revealing-image;
     animation-name: imgshow;
     animation-fill-mode: backwards;
@@ -310,7 +325,7 @@ iframe,img,p,h2,.item_services,#sorteos{
 #info_head{
     width: 100%;
     height: 30px;
-    background: rgba(3, 3, 15, 0.87);
+    background: #192633;
     display: flex;
     position: static;
     flex-direction: row;
@@ -396,13 +411,17 @@ header{
     top: 18px;
     border-radius: 25px;
     background: transparent;
-    border: 0.5px solid white;
+    
     background: white;
     font-weight: bolder;
     font-size: 15px;
    text-align: center;
    text-decoration: none;
    padding-top: 8px;
+    
+}
+#content_header  a:hover{
+    background: rgb(100, 96, 96);
     
 }
 #logo{
@@ -733,7 +752,11 @@ header{
     width: fit-content;
     top: 55px;
     color: wheat;
-    
+    view-timeline-name: --revealing-image;
+    animation-name: imgshow;
+    animation-fill-mode: backwards;
+    animation-timeline: --revealing-image;
+    animation-range: entry 35% cover 40%;
     }
 #p_verano::before{
    content:" ......";
@@ -1042,7 +1065,7 @@ border: 0;
 background: transparent;
 font-size:50px;
 position: fixed;
-z-index: 1000;
+z-index: 999;
 right:  17px;
 bottom: 55px;
 opacity: 0;
