--- a/styles.css
+++ b/styles.css
@@ -724,7 +724,7 @@ header{
     position: relative;
     width: 100%;
     height: fit-content;
-    background-image: url("./img/407033188_7240007256043210_27852.png");
+    background-image: url("https://scontent.fppn1-1.fna.fbcdn.net/v/t39.30808-6/424633640_122170761284008252_8718062299847600851_n.jpg?stp=dst-jpg_p843x403&_nc_cat=110&ccb=1-7&_nc_sid=3635dc&_nc_eui2=AeGXw2SvacnYvkWfWlKp2gkyHewHfQrJb-Md7Ad9Cslv40OyYcVWjKoW-ExCjpHTzrmb73I0_UineyEnyvGuTJAI&_nc_ohc=Lp0ce7EUGYcAX99zcB_&_nc_ht=scontent.fppn1-1.fna&oh=00_AfBJAzE_H6YpB7tNqGfeT6vhis8bZ4awxcs5be2uG-yCjw&oe=65CB0C47");
    display: flex;
    flex-direction: column;
    gap: 45px;
@@ -1035,13 +1035,16 @@ font-weight: bolder;
     width: 260px;
     height: 100%;
 }
-#whatsapp{
-            
-    height: fit-content;
+#cont_whats{
     position: fixed;
     right: 20px;
     bottom: 48px;
     z-index: 99;
+}
+#whatsapp{
+            
+    height: fit-content;
+    
     background:#1ebe41f0;
     border-radius:30px;
     text-decoration: none;
@@ -1052,7 +1055,56 @@ font-weight: bolder;
     color: white;
     padding-left: 5px;
     padding-right: 8px;
+    cursor: pointer;
     
+}
+
+#op_ayuda{
+    position: relative;
+    opacity: 0;
+    width: 240px;
+    border-radius: 15px 15px 0 0;
+    background: white;
+    bottom: 25px;
+    transition: ease-out 2s;
+    overflow: hidden;
+
+   
+}
+#op_ayuda.active{
+   opacity: 1;
+ 
+	height: 160px;
+    transition: ease-out 2s;
+}
+.sub_whatsap{
+   
+   position: relative;
+    text-align:  left;
+    width: 100%;
+    height: 30px;
+    padding-top: 15px;
+    padding-bottom: 8px;
+    padding-left: 10px;
+    background: white;
+    
+    
+    border-bottom: 1px solid rgb(59, 57, 57);
+   
+}
+.sub_whatsap a{
+   
+    text-decoration: none;
+    color: black;
+    vertical-align: middle;
+}
+.sub_whatsap a svg {
+    width: 20px;
+    height:16px ;
+    vertical-align: middle;
+}
+.sub_whatsap:hover{
+    background-color: rgb(75, 231, 75);
 }
 #celphone{
     display: flex;
